<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?selectableItemBackground"
              android:orientation="vertical"
              android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/dialog_filter_toys_category_filter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/category_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <RadioGroup android:id="@+id/dialog_filter_category_selector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <RadioButton android:id="@+id/category_none"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tag=""
                     android:text="@string/without_filter"/>
        <RadioButton android:id="@+id/category_dolls"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tag="dolls"
                     android:text="@string/dolls"/>
        <RadioButton android:id="@+id/category_kids"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tag="kids"
                     android:text="@string/kids"/>
        <RadioButton android:id="@+id/category_construction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tag="construction"
                     android:text="@string/constructions"/>
        <RadioButton android:id="@+id/category_sports"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tag="sports"
                     android:text="@string/sports"/>
        <RadioButton android:id="@+id/category_home"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tag="home"
                     android:text="@string/home"/>
    </RadioGroup>
    <TextView
        android:id="@+id/dialog_filter_toys_distance_filter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/distance_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <RadioGroup android:id="@+id/dialog_filter_distance_selector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <RadioButton android:id="@+id/distance_none"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/without_filter"/>
        <RadioButton android:id="@+id/distance_one_km"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/_1km"/>
        <RadioButton android:id="@+id/distance_ten_km"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/_10km"/>
        <RadioButton android:id="@+id/distance_thirty_km"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/_30km"/>
    </RadioGroup>
</LinearLayout>
