<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="thebardals.android.toyguay.activities.ToySellActivity">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_toy_sell_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        <EditText
            android:id="@+id/activity_toy_sell_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"/>
        <EditText
            android:id="@+id/activity_toy_sell_description"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/activity_toy_sell_price"
                android:hint="0.00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:inputType="number"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_symbol"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:gravity="center"
                android:padding="0dp"
                android:layout_margin="0dp">
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageButton
                android:layout_margin="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/noimage"
                android:scaleType="center"
                />
            <ImageButton
                android:layout_margin="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/noimage"
                android:scaleType="center"
                />
            <ImageButton
                android:layout_margin="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/noimage"
                android:scaleType="center"
                />
            <ImageButton
                android:layout_margin="2dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/noimage"
                android:scaleType="center"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button style="@style/Widget.AppCompat.Button.Colored"
                   android:id="@+id/toy_sell_button"
                    android:backgroundTint="@color/colorSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="VENDER PRODUCTO"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>
    <!-- Layout del menú lateral (Navigation View) -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/navview_header"
        app:menu="@menu/menu_navview" />
</android.support.v4.widget.DrawerLayout>